With ENV ready for heroku

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://www.paypal.com/sdk/js?client-id=AY97H2N5KzRa_ky1Dh03Ck9U1Y5klNBx4X2V1WkN2mnYuBVpO3okNb4vRdtr9STF_VAYqrfWL8Obqr4C"></script>
 </body>
 </html>
